--- a/styles/style.css
+++ b/styles/style.css
@@ -701,6 +701,7 @@ li.footer-social-item {
 .catalog-filter-range-controls-price-wrapper {
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 36px;
 }
 
 .price-min-wrapper, .price-max-wrapper {
@@ -731,4 +732,77 @@ li.footer-social-item {
     font-size: 18px;
     line-height: 24px;
     opacity: 0.5;
+}
+
+.catalog-filter-scale {
+    width: 100%;
+    height: 4px;
+    background: #63696d;
+    position: relative;
+}
+
+.catalog-filter-bar {
+    background: #ffffff;
+    height: 4px;
+    width: 260px;
+}
+
+.range-toggle {
+    background: #FFFFFF;
+    border-radius: 5px;
+    width: 20px;
+    height: 20px;
+    display: block;
+    position: absolute;
+    border: none;
+}
+
+.range-toggle.range-toggle-min {
+    top: -9px;
+    left: -2px;
+}
+
+.range-toggle.range-toggle-max {
+    right: 106px;
+    top: -7px;
+}
+
+.filter-button-wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+.filter-button {
+    background: #82B3D3;
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding: 8px 50px;
+    border: none;
+}
+
+
+.button-apply {
+    margin-top: 56px;
+    margin-bottom: 32px;
+}
+
+.button-reset {
+    background: inherit;
+}
+
+.hotel-catalog-carts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.hotel-catalog-header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
