--- a/styles/style.css
+++ b/styles/style.css
@@ -132,6 +132,7 @@ html {
   color: #000000;
   text-decoration: none;
   padding: 20px 18px;
+  position: relative;
 }
 
 .logo-wrapper {
@@ -581,6 +582,51 @@ li.footer-social-item {
   display: block;  
 }
 
+.vk:hover {
+  background-image: url(../img/vk-2.svg);
+  opacity: 1;
+}
+
+.telegram:hover {
+  background-image: url(../img/telegram-2.svg);
+  opacity: 1;
+}
+
+.youtube:hover {
+  background-image: url(../img/youtube-2.svg);
+  opacity: 1;
+}
+
+.vk:focus {
+  background-image: url(../img/vk-2.svg);
+  opacity: 1;
+  outline: none;
+}
+
+.telegram:focus {
+  background-image: url(../img/telegram-2.svg);
+  opacity: 1;
+  outline: none;
+}
+
+.youtube:focus {
+  background-image: url(../img/youtube-2.svg);
+  opacity: 1;
+  outline: none;focus
+}
+
+.vk:active{
+  opacity: 0.3;
+}
+
+.telegram:active {
+  opacity: 0.3;
+}
+
+.youtube:active {
+  opacity: 0.3;
+}
+
 .page-footer-social-list {
   display: flex;
   flex-wrap: wrap;
@@ -687,14 +733,22 @@ li.footer-social-item {
 }
 
 .control, .control-radio {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 23px;
-    color: #FFFFFF;
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
-    flex-wrap: wrap;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  flex-wrap: wrap;
+}
+
+.controls-price-min {
+  border-radius: 4px 0px 0px 4px;
+}
+
+.controls-price-max {
+  border-radius: 0px 4px 4px 0px;
 }
 
 .controls-price-min, .controls-price-max {
@@ -705,12 +759,20 @@ li.footer-social-item {
   padding: 12px 20px;
   max-width: 143px;
   position: relative;
+  background: #F2F2F2;
+  border: none;
+}
+
+.controls-price-min:hover, .controls-price-max:hover {
+  opacity: 1;
+  background: #E6E6E6;
 }
 
 .catalog-filter-range-controls-price-wrapper {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 36px;
+  gap: 2px;
 }
 
 .price-min-wrapper, .price-max-wrapper {
@@ -848,6 +910,19 @@ li.footer-social-item {
   height: 48px;
   border-radius: 4px;
   border: 2px solid #E5E5E5;
+}
+
+.filter-icons-item:hover {
+  border: 2px solid #000000;
+}
+
+.filter-icons-item:focus {
+  border: 2px solid #68A2CA;
+  outline: inherit;
+}
+
+.filter-icons-item:active {
+  border: 2px solid #000000;
 }
 
 .filter-icons-wrapper {
@@ -1243,26 +1318,45 @@ span.children-title {
 }
 
 .number-minus-wrapper a {
-  background-image: url(../img/minus.svg);
-  height: 100%;
-  width: 100%;
-  display: block;
-  background-repeat: no-repeat;
-  background-position: center;
+    background-image: url(../img/minus.svg);
+    height: 14px;
+    width: 14px;
+    display: block;
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
+.number-minus-wrapper a:hover {
+    background-image: url(../img/minus-2.svg);
+  }
+
+  .number-minus-wrapper a:focus {
+    background-image: url(../img/minus-2.svg);
+  }
 
 .number-plus-wrapper a {
   background-image: url(../img/plus.svg);
-  height: 100%;
-  width: 100%;
-  display: block;
-  background-repeat: no-repeat;
-  background-position: center;
+    height: 14px;
+    width: 14px;
+    display: block;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.number-plus-wrapper a:hover {
+  background-image: url(../img/plus-2.svg);
+}
+
+.number-plus-wrapper a:focus {
+  background-image: url(../img/plus-2.svg);
 }
 
 .number-plus-wrapper, .number-minus-wrapper {
   width: 100%;
   height: 100%;
+  display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .children-info:hover ~ .hover-info {
@@ -1439,52 +1533,229 @@ article.search-popup {
 }
 
 .control-input {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
 }
 
 .control:before {
-    content: '';
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background: #FFFFFF;
-    border-radius: 4px;
-    margin-right: 16px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    box-sizing: border-box;
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: #FFFFFF;
+  border-radius: 4px;
+  margin-right: 16px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  box-sizing: border-box;
 }
 
 .control-input:checked + .control:before {
 
-    background-image: url(../img/ok.svg);
-      outline: #83B3D3 solid 2px;
+  background-image: url(../img/ok.svg);
+  outline: #83B3D3 solid 2px;
 }
 
 .control-radio-input {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
 }
 
 .control-radio:before {
-    content: '';
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    border-radius: 50px;
-    margin-right: 14px;
-    background: #FFFFFF;
-    box-sizing: border-box;
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 50px;
+  margin-right: 14px;
+  background: #FFFFFF;
+  box-sizing: border-box;
 }
 
 .control-radio-input:checked + .control-radio:before {
-    border: #83B3D3 solid 2px;
-    background-image: url(../img/circle.svg);
-    background-repeat: no-repeat;
-    background-position: center;
+  outline: #83B3D3 solid 2px;
+  background-image: url(../img/circle.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 }           
 
+.control:hover, .control-radio:hover {
+  opacity: 0.6;
+}
 
+.control-input:focus + label:before {
+  outline: 3px solid #83B3D3;
+}
+
+.control-radio-input:focus + label:before {
+  outline: 3px solid #83B3D3;
+}
+
+
+.control:active, .control-radio:active {
+  opacity: 0.3;
+}
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.controls-price-min:active, .controls-price-max:active {
+  opacity: 1;
+  outline: #000000 solid 3px;
+}
+
+.page-footer-phone {
+  text-decoration: none;
+}
+
+.page-footer-phone:hover {
+  opacity: 1;
+  color: #756157;
+
+}
+
+.page-footer-phone:focus {
+  outline: none;
+  color: #756157;
+}
+
+.page-footer-phone:active {
+  color: rgba(117, 97, 87, 0.3);
+}
+
+a.page-footer-copyright-link {
+  display: block;
+  width: 115px;
+  height: 33px;
+  background-image: url(../img/html-academy.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+
+a.page-footer-copyright-link:hover {
+  background-image: url(../img/html-academy-2.svg);
+  opacity: 1;
+}
+
+a.page-footer-copyright-link:focus {
+  background-image: url(../img/html-academy-2.svg);
+  opacity: 1;
+  outline: inherit;
+}
+
+a.page-footer-copyright-link:active {
+  background-image: url(../img/html-academy-3.svg);
+  opacity: 1;
+}
+
+.current-page:hover, .pagination-box .white-block:hover {
+  opacity: 1;
+  background: inherit;
+}
+
+.current-page:focus, .white-block:focus {
+  opacity: 1;
+  outline: inherit;
+}
+
+.pagination-box .white-block:active {
+  opacity: 1;
+  background: inherit;
+  color: inherit;
+}
+
+.pagination-box-item.white-block:focus {
+  opacity: 1;
+  background: inherit;
+  color: inherit;
+}
+
+.pagination-box-item.current-page:active {
+  opacity: 1;
+  background: inherit;
+  color: inherit;
+}
+
+.pagination-box-item.current-page:hover {
+  opacity: 1;
+  background: #F2F2F2;
+}
+
+.pagination-box-item.current-page:focus {
+  opacity: 1;
+  background: #F2F2F2;
+}
+
+
+.pagination-box-item {
+  text-decoration: none;
+}
+
+.pagination-box-item:hover {
+  opacity: 1;
+  background: #68A2CA;
+}
+
+.pagination-box-item:focus {
+  opacity: 1;
+  background: #68A2CA;
+  outline: inherit;
+}
+
+.pagination-box-item:active {
+  opacity: 1;
+  background: #68A2CA;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.breadcrumbs-item {
+  text-decoration: none;
+}
+
+.breadcrumbs-item:hover {
+  opacity: 1;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.breadcrumbs-item:focus {
+  opacity: 1;
+  outline: none;
+}
+
+.breadcrumbs-item:active {
+  opacity: 1;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.active-link:after {
+  content: ' ';
+  display: block;
+  position: absolute;
+  width: 65%;
+  height: 100%;
+  top: 0px;
+  margin-left: 18px;
+  border-bottom: 2px solid #756257;
+  z-index: 5;
+}
+
+.close-wrapper:hover {
+  background: #E6E6E6;
+}
+
+.close-wrapper a:focus {
+  opacity: 1;
+  outline: #83B3D3 solid 3px;
+  outline-offset: 0px;
+  border-radius: 50%;
+}
+
+.close-wrapper a:active {
+  opacity: 0.3;
+}
